# api/v1/server/restapi/tribe_api.go
@@ -64,6 +64,9 @@ func NewTribeAPI(spec *loads.Document) *TribeAPI {
 		UsersGetUserHandler: users.GetUserHandlerFunc(func(params users.GetUserParams) middleware.Responder {
 			return middleware.NotImplemented("operation users.GetUser has not yet been implemented")
 		}),
+		UsersGetUsersHandler: users.GetUsersHandlerFunc(func(params users.GetUsersParams) middleware.Responder {
+			return middleware.NotImplemented("operation users.GetUsers has not yet been implemented")
+		}),
 	}
 }
 
@@ -110,6 +113,8 @@ type TribeAPI struct {
 	RealmsGetRealmHandler realms.GetRealmHandler
 	// UsersGetUserHandler sets the operation handler for the get user operation
 	UsersGetUserHandler users.GetUserHandler
+	// UsersGetUsersHandler sets the operation handler for the get users operation
+	UsersGetUsersHandler users.GetUsersHandler
 	// ServeError is called when an error is received, there is a default handler
 	// but you can set your own with this
 	ServeError func(http.ResponseWriter, *http.Request, error)
@@ -203,6 +208,9 @@ func (o *TribeAPI) Validate() error {
 	}
 	if o.UsersGetUserHandler == nil {
 		unregistered = append(unregistered, "users.GetUserHandler")
+	}
+	if o.UsersGetUsersHandler == nil {
+		unregistered = append(unregistered, "users.GetUsersHandler")
 	}
 
 	if len(unregistered) > 0 {
@@ -316,6 +324,10 @@ func (o *TribeAPI) initHandlerCache() {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
 	o.handlers["GET"]["/realms/{realm_id}/users/{username}"] = users.NewGetUser(o.context, o.UsersGetUserHandler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/realms/{realm_id}/users"] = users.NewGetUsers(o.context, o.UsersGetUsersHandler)
 }
 
 // Serve creates a http handler to serve the API over HTTP
