# api/v1/server/restapi/users/get_users_responses.go
@@ -1,0 +1,292 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package users
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/grepplabs/tribe/api/v1/models"
+)
+
+// GetUsersBadRequestCode is the HTTP code returned for type GetUsersBadRequest
+const GetUsersBadRequestCode int = 400
+
+/*GetUsersBadRequest Invalid request body.
+
+swagger:response getUsersBadRequest
+*/
+type GetUsersBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Problem `json:"body,omitempty"`
+}
+
+// NewGetUsersBadRequest creates GetUsersBadRequest with default headers values
+func NewGetUsersBadRequest() *GetUsersBadRequest {
+
+	return &GetUsersBadRequest{}
+}
+
+// WithPayload adds the payload to the get users bad request response
+func (o *GetUsersBadRequest) WithPayload(payload *models.Problem) *GetUsersBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get users bad request response
+func (o *GetUsersBadRequest) SetPayload(payload *models.Problem) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetUsersBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetUsersUnauthorizedCode is the HTTP code returned for type GetUsersUnauthorized
+const GetUsersUnauthorizedCode int = 401
+
+/*GetUsersUnauthorized Invalid token.
+
+swagger:response getUsersUnauthorized
+*/
+type GetUsersUnauthorized struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Problem `json:"body,omitempty"`
+}
+
+// NewGetUsersUnauthorized creates GetUsersUnauthorized with default headers values
+func NewGetUsersUnauthorized() *GetUsersUnauthorized {
+
+	return &GetUsersUnauthorized{}
+}
+
+// WithPayload adds the payload to the get users unauthorized response
+func (o *GetUsersUnauthorized) WithPayload(payload *models.Problem) *GetUsersUnauthorized {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get users unauthorized response
+func (o *GetUsersUnauthorized) SetPayload(payload *models.Problem) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetUsersUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(401)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetUsersForbiddenCode is the HTTP code returned for type GetUsersForbidden
+const GetUsersForbiddenCode int = 403
+
+/*GetUsersForbidden Insufficient scope.
+
+swagger:response getUsersForbidden
+*/
+type GetUsersForbidden struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Problem `json:"body,omitempty"`
+}
+
+// NewGetUsersForbidden creates GetUsersForbidden with default headers values
+func NewGetUsersForbidden() *GetUsersForbidden {
+
+	return &GetUsersForbidden{}
+}
+
+// WithPayload adds the payload to the get users forbidden response
+func (o *GetUsersForbidden) WithPayload(payload *models.Problem) *GetUsersForbidden {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get users forbidden response
+func (o *GetUsersForbidden) SetPayload(payload *models.Problem) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetUsersForbidden) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(403)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetUsersConflictCode is the HTTP code returned for type GetUsersConflict
+const GetUsersConflictCode int = 409
+
+/*GetUsersConflict Already exists.
+
+swagger:response getUsersConflict
+*/
+type GetUsersConflict struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Problem `json:"body,omitempty"`
+}
+
+// NewGetUsersConflict creates GetUsersConflict with default headers values
+func NewGetUsersConflict() *GetUsersConflict {
+
+	return &GetUsersConflict{}
+}
+
+// WithPayload adds the payload to the get users conflict response
+func (o *GetUsersConflict) WithPayload(payload *models.Problem) *GetUsersConflict {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get users conflict response
+func (o *GetUsersConflict) SetPayload(payload *models.Problem) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetUsersConflict) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(409)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetUsersTooManyRequestsCode is the HTTP code returned for type GetUsersTooManyRequests
+const GetUsersTooManyRequestsCode int = 429
+
+/*GetUsersTooManyRequests Rate limiting
+
+swagger:response getUsersTooManyRequests
+*/
+type GetUsersTooManyRequests struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Problem `json:"body,omitempty"`
+}
+
+// NewGetUsersTooManyRequests creates GetUsersTooManyRequests with default headers values
+func NewGetUsersTooManyRequests() *GetUsersTooManyRequests {
+
+	return &GetUsersTooManyRequests{}
+}
+
+// WithPayload adds the payload to the get users too many requests response
+func (o *GetUsersTooManyRequests) WithPayload(payload *models.Problem) *GetUsersTooManyRequests {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get users too many requests response
+func (o *GetUsersTooManyRequests) SetPayload(payload *models.Problem) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetUsersTooManyRequests) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(429)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*GetUsersDefault Unexpected error
+
+swagger:response getUsersDefault
+*/
+type GetUsersDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Problem `json:"body,omitempty"`
+}
+
+// NewGetUsersDefault creates GetUsersDefault with default headers values
+func NewGetUsersDefault(code int) *GetUsersDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetUsersDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get users default response
+func (o *GetUsersDefault) WithStatusCode(code int) *GetUsersDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get users default response
+func (o *GetUsersDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get users default response
+func (o *GetUsersDefault) WithPayload(payload *models.Problem) *GetUsersDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get users default response
+func (o *GetUsersDefault) SetPayload(payload *models.Problem) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetUsersDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
